@@ -43,11 +43,6 @@ import org.xml.sax.InputSource;
 public class ZkContainer {
   protected static Logger log = LoggerFactory.getLogger(ZkContainer.class);
   
-  /** @deprecated will be remove in Solr 5.0 (SOLR-4622) */
-  public static final String DEFAULT_HOST_CONTEXT = "solr";
-  /** @deprecated will be remove in Solr 5.0 (SOLR-4622) */
-  public static final String DEFAULT_HOST_PORT = "8983";
-  
   protected ZkController zkController;
   private SolrZkServer zkServer;
   private int zkClientTimeout;
@@ -119,21 +114,14 @@ public class ZkContainer {
     if (zkRun == null && zookeeperHost == null)
         return;  // not in zk mode
 
-
-    // BEGIN: SOLR-4622: deprecated hardcoded defaults for hostPort & hostContext
     if (null == hostPort) {
-      // throw new ZooKeeperException(SolrException.ErrorCode.SERVER_ERROR,
-      //               "'hostPort' must be configured to run SolrCloud");
-      log.warn("Solr 'hostPort' has not be explicitly configured, using hardcoded default of " + DEFAULT_HOST_PORT + ".  This default has been deprecated and will be removed in future versions of Solr, please configure this value explicitly");
-      hostPort = DEFAULT_HOST_PORT;
+      throw new ZooKeeperException(SolrException.ErrorCode.SERVER_ERROR,
+                   "'hostPort' must be configured to run SolrCloud");
     }
     if (null == hostContext) {
-      // throw new ZooKeeperException(SolrException.ErrorCode.SERVER_ERROR,
-      //               "'hostContext' must be configured to run SolrCloud");
-      log.warn("Solr 'hostContext' has not be explicitly configured, using hardcoded default of " + DEFAULT_HOST_CONTEXT + ".  This default has been deprecated and will be removed in future versions of Solr, please configure this value explicitly");
-      hostContext = DEFAULT_HOST_CONTEXT;
+      throw new ZooKeeperException(SolrException.ErrorCode.SERVER_ERROR,
+                   "'hostContext' must be configured to run SolrCloud");
     }
-    // END: SOLR-4622
 
     // zookeeper in quorum mode currently causes a failure when trying to
     // register log4j mbeans.  See SOLR-2369
